Revert "commit code ngay 03/10/2022"